--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,20 +3,34 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:gravity="center"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/start_recorder"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="开始录音"/>
+    <SurfaceView
+        android:id="@+id/video"
+        android:layout_width="640dp"
+        android:layout_height="480dp" />
 
-    <Button
-        android:id="@+id/stop_recorder"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="结束录音" />
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/start_recorder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="开始录音"/>
+
+        <Button
+            android:id="@+id/stop_recorder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="结束录音" />
+
+    </LinearLayout>
+
+
 
 </LinearLayout>
